--- a/ui/index.html
+++ b/ui/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,4 +19,33 @@
     <div id="result"></div>
     <script src="app.js"></script>
 </body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Invoke OpenWhisk Function</title>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>OpenWhisk Function Invoker</h1>
+            <button class="toggle-theme" onclick="toggleTheme()"><i class="fas fa-moon"></i></button>
+        </div>
+        <div class="form-group">
+            <label for="functionSelect">Choose a function:</label>
+            <select id="functionSelect" class="select-box"></select>
+        </div>
+        <div id="parameterContainer" class="parameters"></div>
+        <button type="button" class="btn add-btn" onclick="addParameter()">Add Parameter</button>
+        <button class="btn invoke-btn" onclick="invokeFunction()">Invoke Function</button>
+        <div id="result" class="result"></div>
+        <div id="timeTaken" class="time-taken"></div>
+    </div>
+    <script src="app.js"></script>
+</body>
 </html>
+
