Add cache hit / miss indicator

--- a/ui/index.html
+++ b/ui/index.html
@@ -40,10 +40,11 @@
             <select id="functionSelect" class="select-box"></select>
         </div>
         <div id="parameterContainer" class="parameters"></div>
-        <button type="button" class="btn add-btn" onclick="addParameter()">Add Parameter</button>
+        <button type="button" class="add-btn" onclick="addParameter()"><i class="fas fa-add"></i></button>
         <button class="btn invoke-btn" onclick="invokeFunction()">Invoke Function</button>
         <div id="result" class="result"></div>
         <div id="timeTaken" class="time-taken"></div>
+        <div id="cacheStatus" class="cache-status"></div>
     </div>
     <script src="app.js"></script>
 </body>
